Fix text spacing issue on content pages & tertiary nav

--- a/src/scss/Nav.scss
+++ b/src/scss/Nav.scss
@@ -426,7 +426,7 @@
     width: 100%;
     padding: 12px 0 12px 10px;
     border-bottom: 1px solid $openLawA11yBrown;
-    line-height: 1;
+    line-height: 1.2;
   }
   
   .tertiary-active {
